syntax = "proto3";

option go_package = "pkg/grpc/v1";

message ShortUrl {
  string short_url = 1;
}

message LongUrl {
  string long_url = 1;
}

service Shortcut {
  rpc GetShortURL(LongUrl) returns (ShortUrl);
  rpc GetLongURL(ShortUrl) returns (LongUrl);
}